@@ -28,6 +28,8 @@ Small features:
   * New starpu_task_insert() parameter STARPU_TASK_WORKERIDS allowing
     to set the fields starpu_task::workerids_len and
     starpu_task::workerids
+  * New starpu_task_insert() parameters STARPU_SEQUENTIAL_CONSISTENCY,
+    STARPU_TASK_NO_SUBMITORDER and STARPU_TASK_PROFILING_INFO
 
 StarPU 1.3.2 (git revision af22a20fc00a37addf3cc6506305f89feed940b0)
 ==============================================
